[package]
name = "renderhash2d_rust"
version = "0.1.0"
authors = ["ikachko"]
edition = "2018"

[[bin]]
name = "render_hash"
path = "src/main.rs"

[dependencies]
ocl = { version = "0.16" }
ocl-core = "0.11.1"
image = "*"
png = "0.11.0"
sha2 = "0.7"
termcolor = "1.0.4"
number_prefix = "0.3.0"
byteorder = "1.3.1"
